@@ -637,6 +637,9 @@ Release 0.18.0 - Unreleased
     HADOOP-3599. Fix JobConf::setCombineOnceOnly to modify the instance rather
     than a parameter. (Owen O'Malley via cdouglas)
 
+    HADOOP-3590. Null pointer exception in JobTracker when the task tracker is 
+    not yet resolved. (Amar Ramesh Kamat via ddas)
+
 Release 0.17.1 - Unreleased
 
   INCOMPATIBLE CHANGES
